更新01的图片问题

--- a/01.md
+++ b/01.md
@@ -15,7 +15,7 @@
 
 但实际上除了`“http:”`，网址还可以以其他一些文字开头，例如`“ftp:”“file:” “mailto:”C` 等。 之所以有各种各样的 URL，是因为尽管我们通常是使用浏览器来访问 Web 服务器的，但实际上浏览器并不只有这一个功能，它也可以用来在 FTP服务器上下载和上传文件，同时也具备电子邮件客户端的功能。**可以说，浏览器是一个具备多种客户端功能的综合性客户端软件**，因此它需要 一些东西来判断应该使用其中哪种功能来访问相应的数据，比如访问 Web 服务器时用`“http:”`，而访问 FTP 服务器时用`“ftp:”`
 
-![image-20211117163521479](https://syz-picture.oss-cn-shenzhen.aliyuncs.com/image-20211117163521479.png)
+<img src="https://syz-picture.oss-cn-shenzhen.aliyuncs.com/image-20211117163521479.png" alt="image-20211117163521479" style="zoom: 80%;" />
 
 ```C
 http://glasscom.com/dir/file1.htm
@@ -37,7 +37,7 @@ http://glasscom.com/dir/file1.htm
 
 方法表示需要让 Web 服务器完成怎样的工作，其中典型的例子包括读取 URI 表示的数据、 将客户端输入的数据发送给 URI 表示的程序等。表 1.1 列举了主要的方法， 通过这张表大家应该能够理解通过方法可以执行怎样的操作。
 
-![image-20211117164314068](https://syz-picture.oss-cn-shenzhen.aliyuncs.com/image-20211117164314068.png)
+<img src="https://syz-picture.oss-cn-shenzhen.aliyuncs.com/image-20211117164314068.png" alt="image-20211117164314068" style="zoom:80%;" />
 
 > URI表示访问目标
 >
