更新01的图片问题

--- a/01.md
+++ b/01.md
@@ -47,5 +47,11 @@ http://glasscom.com/dir/file1.htm
 
 收到请求消息之后，Web 服务器会对其中的内容进行解析，通过 URI 和方法来判断“对什么”“进行怎样的操作”，并根据这些要求来完成自己的工作，然后将结果存放在响应消息中。在响应消息的开头有一个状态码， 它用来表示操作的执行结果是成功还是发生了错误。
 
-响应消息会被发送回客户端，客户端收到之后，浏览器会从消息中读出所需的数据并显示在屏幕上。到这里，HTTP 的整个工作就完成了。
+响应消息会被发送回客户端，客户端收到之后，浏览器会从消息中读出所需的数据并显示在屏幕上。到这里，HTTP的整个工作就完成了。
+
+如果只有 GET 和 POST 方法，我们就只能从 Web 服务器中获取网页数据，以及将网 页输入框中的信息发送给 Web 服务器，而有了 PUT 和 DELETE 方法，就 能够从客户端修改或者删除 Web 服务器上的文件。
+
+#### 生成HTTP请求消息
+
+![image-20211117170042811](https://syz-picture.oss-cn-shenzhen.aliyuncs.com/image-20211117170042811.png)
 
